@@ -27,6 +27,8 @@ To documentation:
 
 To APIs:
 
+* Added rsf_filter for running Madagscar programs from MATLAB
+
 To the Python package:
 
 * Added an ability to have list arguments in configure
